--- a/index.html
+++ b/index.html
@@ -54,34 +54,90 @@
                             <li class="selected">
                                 <a href="#">
                                     <span class="icon">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="23.5" height="15.264" viewBox="0 0 23.5 15.264">
-                                            <g id="dashboard" transform="translate(0.75 0.75)">
-                                                <path id="Path_3" data-name="Path 3" d="M134.068,45.318a11.683,11.683,0,0,1,21.53-6.28" transform="translate(-134.068 -33.638)" fill="none" stroke="#fff" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1.5" stroke-dasharray="1 0 6 0 17 0" />
-                                                <path id="Path_4" data-name="Path 4" d="M142.509,47.886a6.832,6.832,0,0,1,11.839-4.648q.147.157.284.325" transform="translate(-136.492 -35.768)" fill="none" stroke="#fff" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1.5" stroke-dasharray="1 0 14 0 7 0" />
-                                                <path id="Path_5" data-name="Path 5" d="M154.208,48.708l7.22-5.991-8.7,3.119" transform="translate(-139.428 -36.245)" fill="none" stroke="#fff" stroke-linejoin="round" stroke-width="1.5" />
-                                                <circle id="Ellipse_1" data-name="Ellipse 1" cx="2.084" cy="2.084" r="2.084" transform="translate(10.765 9.596)" fill="none" stroke="#fff" stroke-miterlimit="10" stroke-width="1.5" />
-                                                <path id="Path_6" data-name="Path 6" d="M152.094,37.8a9.51,9.51,0,0,1,6.989,3.049q.2.22.395.453" transform="translate(-139.245 -34.834)" fill="none" stroke="#fff" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1.5" stroke-dasharray="1 0 14 0 7 0" />
-                                            </g>
-                                        </svg>
+                                        <svg version="1.1" id="Layer_1" width="22" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                             viewBox="0 0 23.5 15.3" style="enable-background:new 0 0 23.5 15.3;" xml:space="preserve">
+
+<g id="dashboard" transform="translate(0.75 0.75)">
+                                        <g id="Path_3">
+                                        <path class="st0" d="M0,12.4L0,12.4c-0.4,0-0.8-0.3-0.8-0.8c0-6.9,5.6-12.4,12.4-12.4c4.3,0,8.2,2.1,10.5,5.7
+			c0.2,0.3,0.1,0.8-0.2,1c-0.4,0.2-0.8,0.1-1-0.2c-2-3.2-5.5-5-9.2-5c-6,0-10.9,4.9-10.9,10.9C0.7,12.1,0.4,12.4,0,12.4z" />
+
+	</g>
+                                        <g id="Path_4">
+                                        <path class="st0" d="M6,12.9c-0.4,0-0.8-0.3-0.8-0.8c0-4.2,3.4-7.6,7.6-7.6C15,4.5,17,5.4,18.4,7c0.1,0.1,0.2,0.2,0.3,0.4
+			c0.3,0.3,0.2,0.8-0.1,1.1c-0.3,0.3-0.8,0.2-1.1-0.1c-0.1-0.1-0.2-0.2-0.2-0.3C16.2,6.7,14.5,6,12.8,6c-3.4,0-6.1,2.7-6.1,6.1
+			C6.8,12.5,6.4,12.9,6,12.9z" />
+
+	</g>
+                                        <g id="Path_5">
+                                        <path class="st0" d="M15.3,13l-1-1.2l3.9-3.3l-4.7,1.7L13,8.9l8.7-3.1c0.3-0.1,0.7,0,0.9,0.3c0.2,0.3,0.1,0.7-0.2,0.9L15.3,13z" />
+
+	</g>
+                                        <g id="Ellipse_1">
+                                        <path class="st0" d="M12.8,14.5c-1.6,0-2.8-1.3-2.8-2.8s1.3-2.8,2.8-2.8s2.8,1.3,2.8,2.8S14.4,14.5,12.8,14.5z M12.8,10.3
+			c-0.7,0-1.3,0.6-1.3,1.3s0.6,1.3,1.3,1.3s1.3-0.6,1.3-1.3S13.6,10.3,12.8,10.3z" />
+
+	</g>
+                                        <g id="Path_6">
+                                        <path class="st0" d="M20.2,7.2c-0.2,0-0.4-0.1-0.6-0.3c-0.1-0.1-0.2-0.3-0.4-0.4c-1.6-1.8-4-2.8-6.4-2.8c-0.4,0-0.8-0.3-0.8-0.8
+			s0.3-0.8,0.8-0.8c2.9,0,5.6,1.2,7.5,3.3c0.1,0.2,0.3,0.3,0.4,0.5C21.1,6.3,21,6.8,20.7,7C20.6,7.2,20.4,7.2,20.2,7.2z" />
+
+	</g>
+</g>
+</svg>
+
                                     </span>Dashboard
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
                                     <span class="icon">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="23.5" height="29.172" viewBox="0 0 23.5 29.172">
-                                            <g id="mycases" transform="translate(0.75 0.75)">
-                                                <path id="Path_12" data-name="Path 12" d="M15.959,5.043A4.041,4.041,0,1,1,11.917,1,4.041,4.041,0,0,1,15.959,5.043Z" transform="translate(-3.747 -1.002)" fill="none" stroke="#fff" stroke-miterlimit="10" stroke-width="1.5" />
-                                                <path id="Path_15" data-name="Path 15" d="M6.622,25.8H1V21.805a4.2,4.2,0,0,1,4.2-4.2h7.5a4.2,4.2,0,0,1,4.2,4.2h0" transform="translate(-1 -7.636)" fill="none" stroke="#fff" stroke-width="1.5" />
-                                                <g id="Group_7" data-name="Group 7" transform="translate(7.673 16.029)">
-                                                    <path id="Path_13" data-name="Path 13" d="M27.772,39.209v4.628a.1.1,0,0,1-.1.1H15.522a.1.1,0,0,1-.1-.1h0V39.209" transform="translate(-14.434 -32.293)" fill="none" stroke="#fff" stroke-miterlimit="10" stroke-width="1.5" />
-                                                    <path id="Rectangle_6" data-name="Rectangle 6" d="M19.672,27.693h7.136a.137.137,0,0,1,.137.137h0v1.7a.137.137,0,0,1-.136.137H19.672a.137.137,0,0,1-.137-.137v-1.7a.137.137,0,0,1,.137-.137Z" transform="translate(-16.077 -27.693)" fill="none" stroke="#fff" stroke-miterlimit="10" stroke-width="1.5" />
-                                                    <path id="Path_14" data-name="Path 14" d="M19.291,35.923H13.876a.1.1,0,0,1-.1-.1h0V31.082a.1.1,0,0,1,.1-.1H28a.1.1,0,0,1,.1.1v4.742a.1.1,0,0,1-.1.1H25.141" transform="translate(-13.777 -29.007)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" />
-                                                    <line id="Line_5" data-name="Line 5" x1="3.181" transform="translate(8.827 6.916)" fill="none" stroke="#fff" stroke-miterlimit="10" stroke-width="1.5" />
-                                                    <path id="Rectangle_7" data-name="Rectangle 7" d="M18.893,36.742h2.243a.163.163,0,0,1,.18.137v2.689a.164.164,0,0,1-.18.138H18.893a.164.164,0,0,1-.181-.138V36.88A.164.164,0,0,1,18.893,36.742Z" transform="translate(-12.512 -31.308)" fill="none" stroke="#fff" stroke-miterlimit="10" stroke-width="1.5" />
-                                                </g>
-                                            </g>
-                                        </svg>
+                                        <svg version="1.1" id="Layer_1" width="22" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                              viewBox="0 0 23.5 29.2" style="enable-background:new 0 0 23.5 29.2;" xml:space="preserve">
+
+<g id="mycases" transform="translate(0.75 0.75)" fill="#ffffff">
+                                        <g id="Path_12">
+                                        <path class="st0" d="M8.2,8.8C8.2,8.8,8.2,8.8,8.2,8.8c-1.3,0-2.5-0.5-3.4-1.4C3.9,6.5,3.4,5.3,3.4,4c0-2.6,2.2-4.8,4.8-4.8
+			c0,0,0,0,0,0C10.8-0.8,13,1.4,13,4v0C13,6.7,10.8,8.8,8.2,8.8z M8.2,0.7C8.2,0.7,8.2,0.7,8.2,0.7C6.4,0.7,4.9,2.2,4.9,4
+			c0,0.9,0.3,1.7,1,2.3c0.6,0.6,1.4,1,2.3,1c0,0,0,0,0,0c1.8,0,3.3-1.5,3.3-3.3v0C11.5,2.2,10,0.7,8.2,0.7z" />
+
+	</g>
+                                        <g id="Path_15">
+                                        <path class="st0" d="M5.6,18.9h-6.4v-4.7c0-2.7,2.2-4.9,5-4.9h7.5c2.7,0,5,2.2,5,4.9h-1.5c0-1.9-1.5-3.4-3.5-3.4H4.2
+			c-1.9,0-3.5,1.5-3.5,3.4v3.2h4.9V18.9z" />
+
+	</g>
+                                        <g id="Group_7" transform="translate(7.673 16.029)">
+                                        <g id="Path_13">
+                                        <path class="st0" d="M13.2,12.4H1.1c-0.5,0-0.9-0.4-0.9-0.8V6.9h1.5v4h10.8v-4h1.5v4.6C14.1,12,13.7,12.4,13.2,12.4z" />
+
+		</g>
+                                        <g id="Rectangle_6">
+                                        <path class="st0" d="M10.7,2.7H3.6c-0.5,0-0.9-0.4-0.9-0.9V0.1c0-0.5,0.4-0.9,0.9-0.9h7.1c0.5,0,0.9,0.4,0.9,0.9v1.7
+				C11.6,2.3,11.2,2.7,10.7,2.7z M4.2,1.2h5.9V0.8H4.2V1.2z" />
+
+		</g>
+                                        <g id="Path_14">
+                                        <path class="st0" d="M14.2,7.7h-2.9c-0.4,0-0.8-0.3-0.8-0.8s0.3-0.8,0.8-0.8h2.2V2.7H0.7v3.4h4.8c0.4,0,0.8,0.3,0.8,0.8
+				S5.9,7.7,5.5,7.7H0.1c-0.5,0-0.9-0.4-0.9-0.9V2.1c0-0.5,0.4-0.8,0.9-0.8h14.1c0.5,0,0.8,0.4,0.8,0.8v4.7
+				C15.1,7.3,14.7,7.7,14.2,7.7z" />
+
+		</g>
+                                        <g id="Line_5">
+                                        <rect x="8.8" y="6.2" class="st0" width="3.2" height="1.5" />
+
+		</g>
+                                        <g id="Rectangle_7">
+                                        <path class="st0" d="M6.3,9.2c-0.4,0-0.8-0.3-0.8-0.8l0-0.1l0-2.8C5.5,5,5.9,4.7,6.4,4.7h2.2C9,4.6,9.5,5,9.5,5.5l0,0.1l0,2.8
+				C9.5,8.9,9,9.2,8.5,9.1L6.3,9.2C6.4,9.2,6.3,9.2,6.3,9.2z M6.4,7.6C6.3,7.6,6.3,7.7,6.4,7.6L6.4,7.6C6.4,7.7,6.4,7.6,6.4,7.6z
+				 M7,6.2v1.5l1.1,0V6.2L7,6.2z M8.6,7.6C8.6,7.6,8.5,7.6,8.6,7.6L8.6,7.6C8.6,7.6,8.6,7.6,8.6,7.6z M8.6,6.2c0,0,0.1,0,0.1,0H8.6z
+				" />
+
+		</g>
+	</g>
+</g>
+</svg>
+
                                     </span>My Cases
                                 </a>
                             </li>
@@ -383,7 +439,7 @@
 
 
 
-        <footer>
+        <footer style="display:none;">
             <div class="container d-flex">
           
                         
