to-do list revised

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                                 <table width="100%" border="0" class="table details">
                                     <tr>
                                         <td class="question">Priority</td>
-                                        <td>   <span class="badge warning mr-2"> <i></i>Critical&Immediate</span> <small>DO NOT DELEGATE OR POSTPONE</small></td>
+                                        <td>   <span class="badge warning mr-2"> <i class="fa fa-exclamation-triangle"></i>Critical&Immediate</span> <small>DO NOT DELEGATE OR POSTPONE</small></td>
                                     </tr>
                                     <tr>
                                         <td class="question">Jurisdiction</td>
