--- a/dashboard.html
+++ b/dashboard.html
@@ -434,7 +434,7 @@
 
 
                 <div class="row">
-                    <div class="d-flex col-xxl-7 col-xl-6">
+                    <div class="d-flex col-xxl-7 col-md-6">
                         <div class="flex-fill w-100 card">
                             <div class="card-header">
                                 <div class="card-actions float-right">
@@ -477,12 +477,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="d-flex col-xxl-5 col-xl-6" id="small-stats">
+                    <div class="d-flex col-xxl-5 col-md-6" id="small-stats">
                         <div class="w-100">
                             <div class="row">
-                                <div class="col-sm-6">
+                                <div class="col-sm-6 d-flex">
 
-                                    <div class="card">
+                                    <div class="card flex-fill">
                                         <div class="card-body">
                                             <div class="row">
                                                 <div class="mt-0 col"><h5 class="card-title">My Cases Summary</h5></div>
@@ -544,10 +544,10 @@
     <h3 class="card-title">To-do List</h3>
 
     <div class="nav flex-column nav-pills substeps" id="case-initiation-tab" role="tablist" aria-orientation="vertical">
-        <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#c1" role="tab" aria-controls="v-pills-home" aria-selected="true"><span class="badge warning mr-2"> <span class="circle"></span>Urgent</span>Review evidence</a>
+        <a class="nav-link active d-flex" id="v-pills-home-tab" data-toggle="pill" href="#c1" role="tab" aria-controls="v-pills-home" aria-selected="true"><span class="badge warning mr-2"> <span class="circle"></span>Urgent</span><div>Review evidence</div></a>
        
-        <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#c2" role="tab" aria-controls="v-pills-messages" aria-selected="false"><span class="badge normal mr-2"> <span class="circle"></span>Normal</span>Submit Case Document</a>
-        <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#c3" role="tab" aria-controls="v-pills-settings" aria-selected="false"><span class="badge low mr-2"> <span class="circle"></span>Low</span>Update Case Outcome</a>
+        <a class="nav-link  d-flex" id="v-pills-messages-tab" data-toggle="pill" href="#c2" role="tab" aria-controls="v-pills-messages" aria-selected="false"><span class="badge normal mr-2"> <span class="circle"></span>Normal</span><div>Submit Case Report</div></a>
+        <a class="nav-link  d-flex" id="v-pills-settings-tab" data-toggle="pill" href="#c3" role="tab" aria-controls="v-pills-settings" aria-selected="false"><span class="badge low mr-2"> <span class="circle"></span>Low</span><div>Update Case Outcome</div></a>
      
 
 
